force-app/main/default/objects/Quote__c/fields/Grand_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Price__c</fullName>
    <label>Grand Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>