force-app/main/default/objects/Quote__c/fields/Quote_Item_Table__c.field-meta.xml
<CustomField>
    <fullName>Quote_Item_Table__c</fullName>
    <label>Quote Item Table</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>