force-app/main/default/objects/Quote__c/fields/Supplier_Address_formula__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address_formula__c</fullName>
    <formula>IF(NOT(ISBLANK(Supplier__r.BillingStreet)), Supplier__r.BillingStreet, NULL) +
IF(NOT(ISBLANK(Supplier__r.BillingCity)), &quot; &quot; + Supplier__r.BillingCity, NULL) +
IF(NOT(ISBLANK(Supplier__r.BillingState)), &quot;, &quot; + Supplier__r.BillingState, NULL) +
IF(NOT(ISBLANK(Supplier__r.BillingPostalCode)), &quot;, &quot; + Supplier__r.BillingPostalCode, NULL) +
IF(NOT(ISBLANK(Supplier__r.BillingCountry)), &quot; &quot; + Supplier__r.BillingCountry, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Address</label>
    <type>Text</type>
</CustomField>