force-app/main/default/objects/Quote__c/fields/Supplier_Email_formula__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email_formula__c</fullName>
    <formula>Supplier__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Email</label>
    <type>Text</type>
</CustomField>