force-app/main/default/objects/Quote__c/fields/Supplier_Phone_formula__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Phone_formula__c</fullName>
    <formula>Supplier__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Phone</label>
    <type>Text</type>
</CustomField>