force-app/main/default/objects/Quote__c/listViews/All_Deleted.listView-meta.xml
<ListView>
    <fullName>All_Deleted</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>All - Deleted</label>
</ListView>