force-app/main/default/objects/Quote__c/listViews/All_New_Quotes.listView-meta.xml
<ListView>
    <fullName>All_New_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Supplier__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>All New Quotes</label>
</ListView>